Fix toggle change error handling and alignment

--- a/site/app.scss
+++ b/site/app.scss
@@ -66,3 +66,7 @@ html, body {
 .mdc-typography--headline6 {
     margin-top: 0px;
 }
+
+.switch-label {
+    padding-left: 10px;
+}
